samples/_failures_safe/1761473554_e62cf6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f489bc7.c: In function ‘main’:
./samples/SAFE/__tmp_7f489bc7.c:174: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_7f489bc7.c:173:5: error: expected declaration or statement at end of input
  173 |     if
      |     ^~
